<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina6_12" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Login View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController storyboardIdentifier="LoginViewController" id="BYZ-38-t0r" customClass="LoginViewController" customModule="TDD_221114" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="Iyk-GF-qmZ">
                                <rect key="frame" x="96.666666666666686" y="384.66666666666669" width="200" height="83"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XAg-as-Iok">
                                        <rect key="frame" x="0.0" y="0.0" width="200" height="34"/>
                                        <accessibility key="accessibilityConfiguration" identifier="idTextField"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="200" id="t8r-CR-AFU"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8Oy-C9-YyQ">
                                        <rect key="frame" x="0.0" y="49" width="200" height="34"/>
                                        <accessibility key="accessibilityConfiguration" identifier="pwTextField"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                </subviews>
                            </stackView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gZl-Pq-4E4">
                                <rect key="frame" x="159" y="487.66666666666669" width="75" height="34.333333333333314"/>
                                <accessibility key="accessibilityConfiguration" identifier="loginButton"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="filled" title="Button"/>
                                <connections>
                                    <action selector="didTapButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="dYo-No-3u7"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <constraints>
                            <constraint firstItem="Iyk-GF-qmZ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Y3c-JO-0X3"/>
                            <constraint firstItem="gZl-Pq-4E4" firstAttribute="top" secondItem="Iyk-GF-qmZ" secondAttribute="bottom" constant="20" id="fcf-y7-0Yh"/>
                            <constraint firstItem="gZl-Pq-4E4" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="kht-te-841"/>
                            <constraint firstItem="Iyk-GF-qmZ" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="yVh-AA-6be"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="idTextField" destination="XAg-as-Iok" id="fdH-oH-Hku"/>
                        <outlet property="pwTextField" destination="8Oy-C9-YyQ" id="Z4a-pH-0wj"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="31" y="-27"/>
        </scene>
        <!--Home View Controller-->
        <scene sceneID="jOT-sJ-gzZ">
            <objects>
                <viewController storyboardIdentifier="HomeViewController" id="knx-5H-vcv" customClass="HomeViewController" customModule="TDD_221114" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" restorationIdentifier="HomeViewController" id="JhW-Gw-Ume">
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <viewLayoutGuide key="safeArea" id="uN8-LG-Nbh"/>
                        <color key="backgroundColor" systemColor="systemOrangeColor"/>
                    </view>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="YaO-xo-1ee" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="709" y="-27"/>
        </scene>
    </scenes>
    <resources>
        <systemColor name="systemBackgroundColor">
            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
        </systemColor>
        <systemColor name="systemOrangeColor">
            <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </systemColor>
    </resources>
</document>
